apps/media-server/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media-server
spec:
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      securityContext:
        fsGroup: 1000
      serviceAccountName: tailscale
      containers:
        - name: tailscale-sidecar
          image: ghcr.io/tailscale/tailscale:v1.102.4
          securityContext:
            capabilities:
              add:
               - NET_ADMIN
          volumeMounts:
            - name: dev-tun
              mountPath: /dev/net/tun
        - name: k8s-mediaserver
          image: docker.io/linuxserver/jellyfin:10.11.11
          imagePullPolicy: Always
          readinessProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 20
            periodSeconds: 15
          ports:
            - name: jellyfin-port
              containerPort: 8096
              protocol: TCP
          volumeMounts:
            - name: pvc-jellyfin-config
              mountPath: /config
            - name: mediaserver-volume
              mountPath: /data
            - name: dri
              mountPath: /dev/dri
              readOnly: true
      volumes:
        - name: mediaserver-volume
          persistentVolumeClaim:
            claimName: mediaserver-rwo-pvc
        - name: pvc-jellyfin-config
          persistentVolumeClaim:
            claimName: pvc-jellyfin-config
        - name: dri
          hostPath:
            path: /dev/dri
            type: Directory
        - name: dev-tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
