apps/media-server/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  type: ClusterIP
  ports:
    - port: 8096
      targetPort: 8096
      protocol: TCP
      name: jellyfin-port
  selector:
    app: jellyfin
